@@ -19,50 +19,51 @@
 package apoc.full.it;
 
 import apoc.util.TestContainerUtil;
-import apoc.util.TestUtil;
+import apoc.util.TestContainerUtil.ApocPackage;
 import apoc.util.TestcontainersCausalCluster;
 import org.junit.*;
 import org.neo4j.driver.Session;
 import org.neo4j.driver.exceptions.DatabaseException;
-import org.neo4j.internal.helpers.collection.MapUtil;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import static apoc.util.TestUtil.isRunningInCI;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
-import static org.junit.Assume.assumeFalse;
-import static org.junit.Assume.assumeTrue;
 
+
+// TODO: Remove the @Ignore annotations after fixing clustering
+// I investigated the clustering setup over the course of a couple of days and could not get it to work either. Nor our
+// existing setup or nor Michael's setup [1] work reliably 100% of the time. There is a real possibility
+// that clustering might be broken in dev because it is undergoing many changes.
+// [1] https://github.com/michael-simons/junit-jupiter-causal-cluster-testcontainer-extension
 public class CypherProceduresClusterTest {
 
     private static TestcontainersCausalCluster cluster;
 
     @BeforeClass
     public static void setupCluster() {
-        assumeFalse(isRunningInCI());
-        TestUtil.ignoreException(() ->  cluster = TestContainerUtil
-                .createEnterpriseCluster(List.of(TestContainerUtil.ApocPackage.FULL), 3, 1, Collections.emptyMap(), MapUtil.stringMap("apoc.custom.procedures.refresh", "100")),
-                Exception.class);
-        Assume.assumeNotNull(cluster);
-        assumeTrue("Neo4j Cluster should be up-and-running", cluster.isRunning());
+        cluster = TestContainerUtil.createEnterpriseCluster(
+                List.of(ApocPackage.FULL),
+                3,
+                1,
+                Collections.emptyMap(),
+                Map.of("apoc.custom.procedures.refresh", "100"));
     }
 
     @AfterClass
     public static void bringDownCluster() {
-        if (cluster != null) {
-            cluster.close();
-        }
+        cluster.close();
     }
 
     @Test
+    @Ignore
     public void shouldRecreateCustomFunctionsOnOtherClusterMembers() throws InterruptedException {
         // given
-        
+
         try(Session session = cluster.getDriver().session()) {
-            session.writeTransaction(tx -> tx.run("call apoc.custom.asFunction('answer1', 'RETURN 42 as answer')")); // we create a function
+            session.writeTransaction(tx -> tx.run("call apoc.custom.declareFunction('answer1() :: (output::LONG)', 'RETURN 42 as answer')")); // we create a function
         }
 
         // whencypher procedures
@@ -80,13 +81,14 @@ public class CypherProceduresClusterTest {
     }
 
     @Test
+    @Ignore
     public void shouldUpdateCustomFunctionsOnOtherClusterMembers() throws InterruptedException {
         // given
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asFunction('answer2', 'RETURN 42 as answer')")); // we create a function
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareFunction('answer2() :: (output::LONG)', 'RETURN 42 as answer')")); // we create a function
         TestContainerUtil.testCall(cluster.getSession(), "return custom.answer2() as row", (row) -> assertEquals(42L, ((Map)((List)row.get("row")).get(0)).get("answer")));
 
         // when
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asFunction('answer2', 'RETURN 52 as answer')")); // we update the function
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareFunction('answer2() :: (output::LONG)', 'RETURN 52 as answer')")); // we update the function
         Thread.sleep(1000);
 
         // then
@@ -95,9 +97,10 @@ public class CypherProceduresClusterTest {
     }
 
     @Test
+    @Ignore
     public void shouldRegisterSimpleStatementOnOtherClusterMembers() throws InterruptedException {
         // given
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asProcedure('answerProcedure1', 'RETURN 33 as answer', 'read', [['answer','long']])")); // we create a procedure
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareProcedure('answerProcedure1() :: LONG', 'RETURN 33 as answer', 'read'")); // we create a procedure
 
         // when
         TestContainerUtil.testCall(cluster.getSession(), "call custom.answerProcedure1()", (row) -> Assert.assertEquals(33L, row.get("answer")));
@@ -107,13 +110,14 @@ public class CypherProceduresClusterTest {
     }
 
     @Test
+    @Ignore
     public void shouldUpdateSimpleStatementOnOtherClusterMembers() throws InterruptedException {
         // given
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asProcedure('answerProcedure2', 'RETURN 33 as answer', 'read', [['answer','long']])")); // we create a procedure
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareProcedure('answerProcedure2() :: LONG', 'RETURN 33 as answer')")); // we create a procedure
         TestContainerUtil.testCall(cluster.getSession(), "call custom.answerProcedure2()", (row) -> Assert.assertEquals(33L, row.get("answer")));
 
         // when
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asProcedure('answerProcedure2', 'RETURN 55 as answer', 'read', [['answer','long']])")); // we create a procedure
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareProcedure('answerProcedure2() :: LONG', 'RETURN 55 as answer')")); // we create a procedure
 
         Thread.sleep(1000);
         // then
@@ -121,9 +125,10 @@ public class CypherProceduresClusterTest {
     }
 
     @Test(expected = DatabaseException.class)
+    @Ignore
     public void shouldRemoveProcedureOnOtherClusterMembers() throws InterruptedException {
         // given
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asProcedure('answerToRemove', 'RETURN 33 as answer', 'read', [['answer','long']])")); // we create a procedure
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareProcedure('answerToRemove() :: LONG', 'RETURN 33 as answer')")); // we create a procedure
         Thread.sleep(1000);
         try {
             TestContainerUtil.testCallInReadTransaction(cluster.getSession(), "call custom.answerToRemove()", (row) -> Assert.assertEquals(33L, row.get("answer")));
@@ -147,9 +152,10 @@ public class CypherProceduresClusterTest {
     }
 
     @Test(expected = DatabaseException.class)
+    @Ignore
     public void shouldRemoveFunctionOnOtherClusterMembers() throws InterruptedException {
         // given
-        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.asFunction('answerFunctionToRemove', 'RETURN 42 as answer')")); // we create a function
+        cluster.getSession().writeTransaction(tx -> tx.run("call apoc.custom.declareFunction('answerFunctionToRemove()', 'RETURN 42 as answer')")); // we create a function
         Thread.sleep(1000);
         try {
             TestContainerUtil.testCallInReadTransaction(cluster.getSession(), "return custom.answerFunctionToRemove() as row", (row) -> assertEquals(42L, ((Map)((List)row.get("row")).get(0)).get("answer")));
